exchange workaround with exception handling to select between compare set and normal record set